--- a/css/common.css
+++ b/css/common.css
@@ -4,7 +4,9 @@
   --header-text-color: #212121;
   --button-color: #2196f3;
   --social-media-color: #afb1b8;
+  --border-color: #ececec;
   --footer-text-color: rgba(255, 255, 255, 0.6);
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Общие настройки */
@@ -72,12 +74,11 @@ main {
 
 /* Хедер */
 .header {
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--header-bg-color);
   font-weight: 500;
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .header-link {
@@ -125,6 +126,7 @@ main {
   display: inline-flex;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color var(--transition);
 }
 
 .nav-links a:hover,
@@ -182,11 +184,24 @@ main {
 /* Текущая страница */
 .current {
   color: var(--button-color);
+  position: relative;
+}
+
+/* Нижнее подчеркивание текущей страницы */
+.current::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  background-color: var(--button-color);
 }
 
 /* Футер */
 .footer {
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
@@ -266,6 +281,7 @@ main {
   border-radius: 50%;
   color: var(--header-bg-color);
   background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color var(--transition);
 }
 
 .join-link:hover,
