--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -5,10 +5,13 @@
   background-color: #f5f4fa;
   font-weight: 500;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.625;
   letter-spacing: 0.03em;
   border: transparent;
   border-radius: 4px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn {
@@ -87,6 +90,11 @@
   border-right: 1px solid #eee;
   border-bottom: 1px solid #eee;
   overflow: hidden;
+}
+
+.card-grid {
+  box-shadow: none;
+  transition: box-shadow var(--transition);
 }
 
 .card-grid:hover,
