--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,57 @@ h1 {
   color: var(--header-bg-color);
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transform: scale(1);
+  transition: transform var(--transition);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: inherit;
+  transform: skale(1.5);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  padding: 38px;
+  overflow-y: auto;
+  background-color: var(--header-bg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--header-bg-color);
+}
+
 /* Кнопка */
 .button {
   display: inline-block;
-  margin-top: 40px;
+  margin-top: 30px;
   padding: 10px 32px;
   border-radius: 4px;
+  border: none;
 
   background-color: var(--button-color);
   color: var(--header-bg-color);
@@ -115,6 +160,30 @@ h1 {
   justify-content: space-between;
 }
 
+.pictures-thumb {
+  position: relative;
+}
+
+.pictures-thumb-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  padding: 27px 0;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.pictures-thumb-overlay p {
+  text-transform: uppercase;
+  color: var(--header-bg-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 /* Команда */
 .card-name {
   display: block;
@@ -177,6 +246,7 @@ h1 {
   height: 44px;
   border-radius: 50%;
   border: none;
+  transition: background-color var(--transition), color var(--transition);
 }
 
 .personnel-link:hover,
@@ -225,9 +295,11 @@ h1 {
   height: 90px;
   border: 1px solid var(--social-media-color);
   border-radius: 4px;
+  transition: color var(--transition), border-color var(--transition);
 }
 
-.partner-link:hover {
+.partner-link:hover,
+.partner-link:focus {
   color: var(--button-color);
   border-color: var(--button-color);
 }
