--- a/css/style.css
+++ b/css/style.css
@@ -36,32 +36,37 @@ h1 {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
-  transform: scale(1);
-  transition: transform var(--transition);
+  transition: opacity var(--transition);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  visibility: inherit;
-  transform: skale(1.5);
+  visibility: visible;
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  transform: translate(-50%, -50%) scale(1);
+  min-width: 528px;
+  min-height: 581px;
   padding: 38px;
   overflow-y: auto;
   background-color: var(--header-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  z-index: 1;
+  transition: transform var(--transition);
+}
+
+.backdrop.is-hidden .modal {
+  transform: scale(1.2);
 }
 
 .close-button {
@@ -162,6 +167,7 @@ h1 {
 
 .pictures-thumb {
   position: relative;
+  z-index: -1;
 }
 
 .pictures-thumb-overlay {
